Colab を使用して作成されました

--- a/ABC.ipynb
+++ b/ABC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsDFOexSK5mB3cYcxvCcNz",
+      "authorship_tag": "ABX9TyMaEhTih6ILrlXe+id83RIm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -799,6 +799,117 @@
       ],
       "metadata": {
         "id": "_gpksQfXMUc7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#ABC405"
+      ],
+      "metadata": {
+        "id": "CdcQ_0GEEUBP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#A\n",
+        "R,X = map(int,input().split())\n",
+        "if X == 1 and 1600 <= R <= 2999:\n",
+        "  print(\"Yes\")\n",
+        "  exit()\n",
+        "elif X == 2 and 1200 <= R <= 2399:\n",
+        "  print(\"Yes\")\n",
+        "  exit()\n",
+        "print(\"No\")"
+      ],
+      "metadata": {
+        "id": "c1ShbPYHEXZ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#B\n",
+        "N,M = map(int,input().split())\n",
+        "A = list(map(int,input().split()))\n",
+        "S = set(A)\n",
+        "count = 0\n",
+        "while M == len(S):\n",
+        "  del A[-1]\n",
+        "  S = set(A)\n",
+        "  count += 1\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "id": "NWMz6TgTFLKd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#C\n",
+        "N = int(input())\n",
+        "A = list(map(int, input().split()))\n",
+        "total = sum(A)\n",
+        "total_sq = sum(x * x for x in A)\n",
+        "ans = (total * total - total_sq) // 2\n",
+        "print(ans)"
+      ],
+      "metadata": {
+        "id": "ryQ3-sTTHgeb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#D\n",
+        "from collections import deque\n",
+        "import sys\n",
+        "sys.setrecursionlimit(1 << 25)\n",
+        "\n",
+        "H, W = map(int, input().split())\n",
+        "S = [list(input().strip()) for _ in range(H)]\n",
+        "DIRS = [(-1, 0, 'v'), (1, 0, '^'), (0, -1, '>'), (0, 1, '<')] #方向の定義\n",
+        "arrow = [['' for _ in range(W)] for _ in range(H)]  # 各マスに書く矢印を格納するlistを用意\n",
+        "dist = [[-1] * W for _ in range(H)]  #各マスの非常口までの距離を格納するlistを用意\n",
+        "\n",
+        "q = deque()\n",
+        "for i in range(H): #非常口を全てキューに入れる\n",
+        "    for j in range(W):\n",
+        "        if S[i][j] == 'E':\n",
+        "            q.append((i, j)) #非常口の座標をキューに追加\n",
+        "            dist[i][j] = 0 #非常口自身の距離は0\n",
+        "\n",
+        "while q: #キューがある限り繰り返す\n",
+        "    x, y = q.popleft() #現在位置\n",
+        "    for dx, dy, arrow_dir in DIRS: #4方向で試す\n",
+        "        nx, ny = x + dx, y + dy  #nextX,nextY\n",
+        "        if 0 <= nx < H and 0 <= ny < W: #グリッド内か\n",
+        "            if S[nx][ny] == '.' and dist[nx][ny] == -1: #通路マスかつ未訪問か\n",
+        "                dist[nx][ny] = dist[x][y] + 1 #距離を記録\n",
+        "                arrow[nx][ny] = arrow_dir #どの方向に進めば良いか記録\n",
+        "                q.append((nx, ny)) #次の探索候補として追加\n",
+        "\n",
+        "for i in range(H):\n",
+        "    row = []\n",
+        "    for j in range(W):\n",
+        "        if S[i][j] == '.':\n",
+        "            row.append(arrow[i][j]) #通路マスには矢印\n",
+        "        else:\n",
+        "            row.append(S[i][j]) #壁や非常口はそのまま\n",
+        "    print(''.join(row))"
+      ],
+      "metadata": {
+        "id": "Mu_PAx2BLFIN"
       },
       "execution_count": null,
       "outputs": []
